add getMatchResult api